[package]
name = "kdb-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
csv = "1.2.2"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
reqwest = { version = "0.12.15", features = ["blocking", "cookies"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
