[package]
name = "kdb-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
csv = "1.3.1"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
reqwest = { version = "0.12.15", features = ["blocking", "cookies"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dotenvy = "0.15.7"
